Move LispNamespace to a new runtime package