@@ -1,8 +1,8 @@
 package kevwargo.jlp.objects;
 
 import kevwargo.jlp.exceptions.LispException;
+import kevwargo.jlp.runtime.LispNamespace;
 import kevwargo.jlp.utils.ArgumentsIterator;
-import kevwargo.jlp.utils.LispNamespace;
 
 public class LispInt extends LispObject {
 
@@ -48,7 +48,7 @@ public class LispInt extends LispObject {
     }
 
     public Object format() {
-        return new Long(value);
+        return Long.valueOf(value);
     }
 
     public Object getJavaObject() {
